[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-active-context-management"
version = "0.1.0"
description = "Active context management and compaction reminders for Codex CLI agents"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
cacm = "src.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
